--- a/todo.css
+++ b/todo.css
@@ -117,7 +117,6 @@ header h1 {
 .task-actions button {
   border: none;
   background: none;
-  margin-left: 0.5rem;
   color: #000;
   font-size: 1rem;
 }
@@ -127,4 +126,13 @@ header h1 {
   color: #999;
   padding: 1rem;
   display: none;
+}
+
+.edit-input {
+  font-size: 1rem;
+  border: none;
+  background-color: #f0f0f0;
+  padding: 4px 8px;
+  border-radius: 5px;
+  width: 100%;
 }
